<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/judul"
            android:text="@string/edit_pengguna"
            style="@style/TextJudulHalaman"
            />

        <View
            android:id="@+id/garis_judul"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/nama_nasabah"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="name"
            android:hint="@string/masukkan_nama_nasabah"
            android:inputType="text"
            android:background="@drawable/et_border"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/email_nasabah"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/masukkan_email_nasabah"
            android:inputType="textEmailAddress"
            android:background="@drawable/et_border"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/kata_sandi"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="password"
            android:hint="@string/masukkan_kata_sandi"
            android:inputType="textPassword"
            android:background="@drawable/et_border"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasi"
            android:textColor="@color/white"
            android:layout_marginVertical="50dp"
            android:layout_marginHorizontal="30dp"
            />

    </LinearLayout>

</ScrollView>