<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/layout_konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/judul"
                android:text="@string/tambah_jenis_sampah"
                style="@style/TextJudulHalaman"
                />

            <View
                android:id="@+id/garis_judul"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/kategori_sampah"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                />

            <AutoCompleteTextView
                android:id="@+id/kategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pilih_kategori_sampah"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:inputType="none"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="10dp"
                android:focusable="true"
                android:clickable="true"
                android:cursorVisible="false"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/jenis_sampah"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/jenis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/masukkan_jenis_sampah"
                android:inputType="text"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/satuan"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                />

            <AutoCompleteTextView
                android:id="@+id/satuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/masukkan_satuan_kilogram_biji"
                android:inputType="text"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/harga"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:hint="@string/masukkan_harga_sampah"
                android:inputType="number"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/keterangan"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_keterangan"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="20"
                android:scrollbars="vertical"
                android:padding="10dp"
                android:background="@drawable/et_border"
                android:gravity="top"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/konfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konfirmasi"
                android:textColor="@color/white"
                android:backgroundTint="@color/primary"
                android:layout_marginVertical="50dp"
                android:layout_marginHorizontal="30dp"
                />

            <Button
                android:id="@+id/hapus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hapus"
                android:textColor="@color/white"
                android:backgroundTint="@color/merah"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="30dp"
                />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:trackColor="@color/primary"
            app:indicatorSize="60dp"
            app:trackThickness="4dp"
            android:indeterminate="true"
            />

    </FrameLayout>

</ScrollView>