<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:focusableInTouchMode="true"
    android:descendantFocusability="afterDescendants">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_konten"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/judul"
                    style="@style/TextJudulHalaman"
                    android:text="@string/menabung_sampah"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/garis_judul"
                    />

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/back"
                    android:layout_marginStart="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/garis_judul"
                    />

                <View
                    android:id="@+id/garis_judul"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/judul"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/nama_nasabah"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                />

            <AutoCompleteTextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/masukkan_nama_nasabah"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="10dp"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/jenis_sampah"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />

            <AutoCompleteTextView
                android:id="@+id/jenis1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/pilih_jenis_sampah"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="10dp"
                android:inputType="text"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:completionThreshold="1"
                />

            <TextView
                android:id="@+id/jumlahLabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/jumlah_setor"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/jumlah1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/masukkan_jumlah_setor"
                android:inputType="numberDecimal"
                android:background="@drawable/et_border"
                android:padding="20dp"
                android:layout_marginTop="10dp"
                android:digits="0123456789.,"
                />

            <LinearLayout
                android:id="@+id/containerTambahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/tambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah"
                android:backgroundTint="@color/secondary"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/keterangan"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukkan_keterangan"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="20"
                android:scrollbars="vertical"
                android:padding="10dp"
                android:background="@drawable/et_border"
                android:gravity="top"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/konfirmasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/konfirmasi"
                android:textColor="@color/white"
                android:layout_marginVertical="50dp"
                android:layout_marginHorizontal="30dp"
                />

        </LinearLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:trackColor="@color/primary"
            app:indicatorSize="60dp"
            app:trackThickness="4dp"
            android:indeterminate="true"
            />

    </FrameLayout>

</ScrollView>